--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,16 @@
 {
-    "name": "mmm-folder",
+    "name": "milan-miscevic/folder",
+    "description": "A folder scanner",
+    "type": "library",
+    "keywords": ["scanner", "folder", "active-folder", "relative-path", "absolute-path", "folders", "files"],
+    "license": "MIT",
+    "require": {
+        "php": "^7.2"
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^0.12",
+        "phpunit/phpunit": "^8"
+    },
     "autoload": {
         "psr-4": {
             "Mmm\\Folder\\": "src/"
@@ -10,10 +21,10 @@
             "MmmTest\\Folder\\": "tests/"
         }
     },
-    "require-dev": {
-        "phpunit/phpunit": "^6"
-    },
     "scripts": {
-        "test": "phpunit tests"
+        "coverage": "phpunit --coverage-text",
+        "fix": "php-cs-fixer fix",
+        "stan": "phpstan analyse",
+        "test": "phpunit"
     }
 }
