--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,8 +1,9 @@
 version: 2
 updates:
-- package-ecosystem: composer
+- package-ecosystem: "composer"
   directory: "/"
-  schedule:
-    interval: daily
-    time: "04:00"
   open-pull-requests-limit: 10
+  schedule:
+    interval: "daily"
+    time: "04:00"
+  versioning-strategy: "increase"
