--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8"
+        "php": "^8"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.8.0",
@@ -40,7 +40,9 @@
         }
     },
     "config": {
-        "allow-plugins": {},
+        "allow-plugins": {
+            "infection/extension-installer": false
+        },
         "sort-packages": true
     }
 }
